--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@tanstack/react-query": "^5.90.17",
     "axios": "^1.13.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
